syntax = "proto3";

message Pizza {
    repeated string toppings = 1;
    int32 inches = 2;
    bool cheese = 3;
}

message Order {
    repeated Pizza pizzas = 1;
    string customer_name = 2;
    string address = 3;
}

message OrderConfirmation {
    int64 estimated_delivery = 1;
}

message Encuesta {
    int64 desinteres_diversion = 1;
    int64 fracasado = 2;
    int64 irritado = 3;    
}

message EncuestaConfirmation {
    int64 prediccion = 1;
}

message Empty {
}

service SaludMental {
    rpc IsReady(Empty) returns (Empty) {}
    rpc RegisterOrder(Order) returns (OrderConfirmation) {}
    rpc RegisterEncuesta(Encuesta) returns (EncuestaConfirmation) {}
}